data/derived/sp14/progs/unify/prog2149.ml.out
Characters 74-75:
  | (h::t) -> if t = [] then h else t;;
                                    ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
